--- a/2024/21.ipynb
+++ b/2024/21.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,16 +16,9 @@
     "#     | 0 | A |\n",
     "#     +---+---+\n",
     "# ---------------\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "class Numpad:\n",
+    "    nogo = (0,0)\n",
     "    grid = [\" 0A\", \"123\", \"456\", \"789\"]\n",
     "\n",
     "    def __init__(self):\n",
@@ -61,6 +54,62 @@
     "        x, y = pos\n",
     "        return Numpad.grid[y][x]   \n",
     "\n",
+    "    def path1(self, pos1, pos2):\n",
+    "        x, y = pos1\n",
+    "        xx, yy = pos2\n",
+    "        dx = xx - x\n",
+    "        dy = yy - y\n",
+    "        vx = 1 if dx > 0 else -1\n",
+    "        vy = 1 if dy > 0 else -1\n",
+    "        path = []\n",
+    "        tokenx = \">\" if dx > 0 else \"<\"\n",
+    "        tokeny = \"^\" if dy > 0 else \"v\"\n",
+    "        for i in range(abs(dx)):\n",
+    "             x += vx\n",
+    "             if (x,y) == Numpad.nogo:\n",
+    "                  return None\n",
+    "             path.append(tokenx)\n",
+    "        for i in range(abs(dy)):\n",
+    "             y += vy\n",
+    "             if (x,y) == Numpad.nogo:\n",
+    "                  return None\n",
+    "             path.append(tokeny)\n",
+    "        return ''.join(path)\n",
+    "\n",
+    "    \n",
+    "    def path2(self, pos1, pos2):\n",
+    "        x, y = pos1\n",
+    "        xx, yy = pos2\n",
+    "        dx = xx - x\n",
+    "        dy = yy - y\n",
+    "        vx = 1 if dx > 0 else -1\n",
+    "        vy = 1 if dy > 0 else -1\n",
+    "        path = []\n",
+    "        tokenx = \">\" if dx > 0 else \"<\"\n",
+    "        tokeny = \"^\" if dy > 0 else \"v\"\n",
+    "        for i in range(abs(dy)):\n",
+    "            y += vy\n",
+    "            if (x,y) == Numpad.nogo:\n",
+    "                return None\n",
+    "            path.append(tokeny)\n",
+    "        for i in range(abs(dx)):\n",
+    "            x += vx\n",
+    "            if (x,y) == Numpad.nogo:\n",
+    "                return None\n",
+    "            path.append(tokenx)\n",
+    "        return ''.join(path)\n",
+    "\n",
+    "\n",
+    "    def all_paths(self, pos1, pos2):\n",
+    "        valid = []\n",
+    "        p1 = self.path1(pos1, pos2)\n",
+    "        p2 = self.path2(pos1, pos2)\n",
+    "        if p1 is not None:\n",
+    "             valid.append(p1)\n",
+    "        if p2 is not None and p1 != p2:\n",
+    "             valid.append(p2)\n",
+    "        return valid\n",
+    "\n",
     "    def path(self, pos1, pos2):\n",
     "        x, y = pos1\n",
     "        xx, yy = pos2\n",
@@ -84,9 +133,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['>^', '^>']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#     +---+---+\n",
     "#     | ^ | A |\n",
@@ -94,6 +154,7 @@
     "# | < | v | > |\n",
     "# +---+---+---+\n",
     "class Keypad:\n",
+    "    nogo = (0, 1)\n",
     "    grid = [\"<v>\", \" ^A\"]\n",
     "    def __init__(self):\n",
     "        self.pos = (2, 1)\n",
@@ -129,6 +190,65 @@
     "        x, y = pos\n",
     "        return Keypad.grid[y][x]    \n",
     "    \n",
+    "\n",
+    "    def path1(self, pos1, pos2):\n",
+    "        x, y = pos1\n",
+    "        xx, yy = pos2\n",
+    "        dx = xx - x\n",
+    "        dy = yy - y\n",
+    "        vx = 1 if dx > 0 else -1\n",
+    "        vy = 1 if dy > 0 else -1\n",
+    "        path = []\n",
+    "        tokenx = \">\" if dx > 0 else \"<\"\n",
+    "        tokeny = \"^\" if dy > 0 else \"v\"\n",
+    "        for i in range(dx):\n",
+    "             x += vx\n",
+    "             if (x,y) == Keypad.nogo:\n",
+    "                  return None\n",
+    "             path.append(tokenx)\n",
+    "        for i in range(dy):\n",
+    "             y += vy\n",
+    "             if (x,y) == Keypad.nogo:\n",
+    "                  return None\n",
+    "             path.append(tokeny)\n",
+    "        return ''.join(path)\n",
+    "\n",
+    "    \n",
+    "    def path2(self, pos1, pos2):\n",
+    "        x, y = pos1\n",
+    "        xx, yy = pos2\n",
+    "        dx = xx - x\n",
+    "        dy = yy - y\n",
+    "        vx = 1 if dx > 0 else -1\n",
+    "        vy = 1 if dy > 0 else -1\n",
+    "        path = []\n",
+    "        tokenx = \">\" if dx > 0 else \"<\"\n",
+    "        tokeny = \"^\" if dy > 0 else \"v\"\n",
+    "        for i in range(dy):\n",
+    "            y += vy\n",
+    "            if (x,y) == Keypad.nogo:\n",
+    "                return None\n",
+    "            path.append(tokeny)\n",
+    "        for i in range(dx):\n",
+    "            x += vx\n",
+    "            if (x,y) == Keypad.nogo:\n",
+    "                return None\n",
+    "            path.append(tokenx)\n",
+    "        return ''.join(path)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def all_paths(self, pos1, pos2):\n",
+    "        valid = []\n",
+    "        p1 = self.path1(pos1, pos2)\n",
+    "        p2 = self.path2(pos1, pos2)\n",
+    "        if p1 is not None:\n",
+    "             valid.append(p1)\n",
+    "        if p2 is not None and p1 != p2:\n",
+    "             valid.append(p2)\n",
+    "        return valid\n",
+    "             \n",
+    "\n",
     "    def path(self, pos1, pos2):\n",
     "        x, y = pos1\n",
     "        xx, yy = pos2\n",
@@ -147,31 +267,27 @@
     "        self.button = self.pos_to_key(pos2)\n",
     "        return path\n",
     "\n",
-    "\n"
+    "k = Keypad()\n",
+    "k.all_paths((1,0), (2,1))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "68 29\n",
       "029A 1972\n",
       "\n",
-      "60 980\n",
       "980A 58800\n",
       "\n",
-      "68 179\n",
       "179A 12172\n",
       "\n",
-      "64 456\n",
       "456A 29184\n",
       "\n",
-      "68 379\n",
       "379A 25772\n",
       "\n",
       "127900\n"
@@ -182,7 +298,6 @@
     "import re\n",
     "def complexity(n, code):\n",
     "    c = int(re.sub('[^0-9]', '', code))\n",
-    "    print(n, c)\n",
     "    return n * c\n",
     "\n",
     "numpad = Numpad()\n",
@@ -230,6 +345,67 @@
     "    tot += comp\n",
     "print(tot)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^ ^\n",
+      "<<^^ ^^<<\n",
+      ">> >>\n",
+      "vvv vvv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "def complexity(n, code):\n",
+    "    c = int(re.sub('[^0-9]', '', code))\n",
+    "    return n * c\n",
+    "\n",
+    "numpad = Numpad()\n",
+    "keypad1 = Keypad()\n",
+    "keypad2 = Keypad()\n",
+    "code = \"379A\"\n",
+    "my_paths = []\n",
+    "for c0 in code:\n",
+    "    pos1 = numpad.key_to_pos(c0)\n",
+    "    for p in numpad.all_paths(numpad.pos, pos1):\n",
+    "        robot1 = p + \"A\"\n",
+    "\n",
+    "        for c1 in robot1:\n",
+    "            pos2 = keypad1.key_to_pos(c1)\n",
+    "            for p2 in keypad1.all_paths(keypad1.pos, pos2):\n",
+    "                robot2 = p2 + \"A\"\n",
+    "\n",
+    "                for c2 in robot2:\n",
+    "                    pos3 = keypad2.key_to_pos(c2)\n",
+    "                    for p3 in keypad2.all_paths(keypad2.pos, pos3):\n",
+    "                        my_paths.append(p3 + \"A\")\n",
+    "                    \n",
+    "            keypad2.pos = pos3\n",
+    "        keypad1.pos = pos2\n",
+    "    numpad.pos = pos1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
